# tab_prior

./: README.md  pyproject.toml
example/: guide_differentiable_prior.py  guide_flexible_categorical_config.py  test_classification.py  test_gp_prior.py  test_mlp_prior.py  test_prior_bag.py
example/differentiable_prior/: __init__.py  basic.py  hyperparameter_space.py  multi_sampled.py  with_flexible_categorical.py  with_gp.py
example/flexible_categorical/: __init__.py  binary_classification.py  challenging.py  missing_values.py  multiclass.py  regression.py
prior/: README.md  __init__.py  activation.py  differentiable_prior.py  fast_gp.py  flexible_categorical.py  mlp.py  prior_bag.py  utils.py
tests/: conftest.py  test_examples.py
