[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tab-prior"
version = "0.1.0"
description = "Synthetic tabular data generator with flexible causal priors."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Tab Prior Team" }]
dependencies = [
    "torch>=1.13",
    "numpy>=1.21",
    "scipy>=1.8",
    "gpytorch>=1.10",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.5", "seaborn>=0.12"]

[tool.setuptools]
packages = ["prior"]
